--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   --maxw: 760px;
 
   /* Titre très haut (petite marge + safe-area) */
-  --titleTop: calc(env(safe-area-inset-top) + 1px);
+  --titleTop: calc(env(safe-area-inset-top) + Xpx);
 
   /* Le titre ne doit jamais bouffer l'écran : limite en hauteur */
   --titleMaxH: 28vh;
