--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body::before{
   <img class="title" src="titre.png" alt="Bienvenue sur CS Consenvoye">
 
   <section class="grid" aria-label="Menu">
-    <a class="btn" href="entretien.html"><img src="entretien.png" alt="Entretien"></a>
+    <a class="btn" href="https://nantuko888.github.io/Entretien-CS-Consenvoye-/" target="_self"><img src="entretien.png" alt="Entretien"></a>
     <a class="btn" href="documents.html"><img src="documents.png" alt="Documents"></a>
 
     <a class="btn" href="organisation.html"><img src="organigramme.png" alt="Organigramme"></a>
