--- a/equipes.html
+++ b/equipes.html
@@ -6,297 +6,74 @@
 <title>Équipes – CS Consenvoye</title>
 <style>
   :root{
-    --bg:#060606;
-    --panel: rgba(0,0,0,.55);
-    --panel2: rgba(0,0,0,.35);
-    --text:#f3f3f3;
-    --muted:#bdbdbd;
-    --fire1:#ffb000;
-    --fire2:#ff5a00;
-    --fire3:#ffd36a;
-    --maxw: 980px;
-    --radius: 18px;
+    --maxw: 820px;
     --pad: clamp(14px, 3.5vw, 22px);
     --gap: clamp(12px, 3vw, 18px);
+    --radius: 18px;
+    --text:#f3f3f3;
+    --muted:#bdbdbd;
   }
   *{box-sizing:border-box}
-  html,body{height:100%; margin:0; font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:var(--text); background:var(--bg);}
+  html,body{margin:0; background:#060606; color:var(--text); font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;}
   body::before{
-    content:"";
-    position:fixed; inset:0;
-    background:
-      radial-gradient(1200px 800px at 20% 10%, rgba(255,180,0,.18), transparent 55%),
-      radial-gradient(900px 700px at 80% 15%, rgba(255,90,0,.14), transparent 55%),
-      radial-gradient(1100px 900px at 50% 120%, rgba(255,180,0,.10), transparent 60%),
-      linear-gradient(180deg, rgba(0,0,0,.65), rgba(0,0,0,.55));
-    z-index:-2;
+    content:""; position:fixed; inset:0;
+    background:url("background.png") center top/cover no-repeat;
+    opacity:.18; z-index:-2;
   }
   body::after{
-    content:"";
-    position:fixed; inset:0;
-    background: url("background.png") center top / cover no-repeat;
-    opacity:.22;
-    filter: saturate(1.05) contrast(1.05);
-    z-index:-3;
+    content:""; position:fixed; inset:0;
+    background:
+      radial-gradient(1100px 700px at 20% 10%, rgba(255,180,0,.18), transparent 55%),
+      radial-gradient(900px 600px at 85% 15%, rgba(255,90,0,.14), transparent 55%),
+      linear-gradient(180deg, rgba(0,0,0,.70), rgba(0,0,0,.55));
+    z-index:-1;
   }
-
   .wrap{max-width:var(--maxw); margin:0 auto; padding: calc(env(safe-area-inset-top) + var(--pad)) var(--pad) calc(env(safe-area-inset-bottom) + var(--pad));}
-  .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom: var(--gap);}
-  .title{display:flex; flex-direction:column; gap:4px;}
-  h1{margin:0; font-size: clamp(22px, 4.6vw, 34px); letter-spacing:.3px;}
-  .subtitle{color:var(--muted); font-size: 14px;}
-  .btn{appearance:none; border:1px solid rgba(255,180,0,.35); background:linear-gradient(180deg, rgba(255,180,0,.14), rgba(255,90,0,.08)); color:var(--text);
-      padding:10px 12px; border-radius: 999px; font-weight:600; cursor:pointer;}
-  .btn:active{transform: translateY(1px);}
-
-  .grid{display:grid; grid-template-columns: 1fr; gap: var(--gap);}
-  @media (min-width: 860px){ .grid{ grid-template-columns: 1fr 1fr; } }
-
-  .card{
-    background: linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.35));
-    border: 1px solid rgba(255,180,0,.16);
-    border-radius: var(--radius);
-    overflow:hidden;
-    box-shadow: 0 10px 30px rgba(0,0,0,.35);
-  }
-  .card-h{
-    padding: 14px 16px;
-    background: linear-gradient(90deg, rgba(255,180,0,.20), rgba(255,90,0,.10), rgba(0,0,0,0));
-    border-bottom: 1px solid rgba(255,180,0,.12);
-    display:flex; align-items:center; justify-content:space-between; gap:10px;
-  }
-  .badge{
-    font-weight:800; letter-spacing:.4px;
-    background: radial-gradient(circle at 30% 30%, rgba(255,211,106,.75), rgba(255,90,0,.55));
-    color:#1b0b00;
-    padding:6px 10px; border-radius: 999px;
-  }
-  .card-b{padding: 14px 16px;}
-  .row{display:flex; justify-content:space-between; gap:12px; padding:10px 0; border-bottom: 1px dashed rgba(255,180,0,.15);}
-  .row:last-child{border-bottom:0}
-  .k{color:var(--muted); font-weight:700;}
-  .v{font-weight:800;}
-  .list{margin:12px 0 0; padding:0; list-style:none; display:flex; flex-direction:column; gap:8px;}
-  .pill{
-    display:flex; align-items:center; justify-content:space-between; gap:10px;
-    padding:10px 12px; border-radius: 14px;
-    background: rgba(0,0,0,.35);
-    border: 1px solid rgba(255,180,0,.12);
-  }
-  .tag{
-    font-size:12px; font-weight:800; letter-spacing:.2px;
-    padding:4px 8px; border-radius: 999px;
-    background: rgba(255,180,0,.14);
-    border: 1px solid rgba(255,180,0,.22);
-    color: var(--fire3);
-    white-space: nowrap;
-  }
-
-  .agents{margin-top: var(--gap);}
-  .agents .card-b{padding-top: 8px;}
-  .search{
-    width:100%;
-    padding:12px 12px;
-    border-radius: 14px;
-    border: 1px solid rgba(255,180,0,.18);
-    background: rgba(0,0,0,.35);
-    color: var(--text);
-    outline:none;
-  }
-
-  .hint{color:var(--muted); font-size: 13px; margin-top:10px; line-height:1.35;}
-  code{background: rgba(0,0,0,.35); padding:2px 6px; border-radius: 8px; border:1px solid rgba(255,180,0,.12);}
+  .top{display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom: var(--gap);}
+  h1{margin:0; font-size: clamp(22px, 4.6vw, 32px);}
+  .btn{border:1px solid rgba(255,180,0,.25); background:rgba(0,0,0,.35); color:var(--text); padding:10px 12px; border-radius:999px; font-weight:700;}
+  .grid{display:grid; grid-template-columns:1fr; gap: var(--gap);}
+  @media(min-width:820px){ .grid{grid-template-columns:1fr 1fr;} }
+  .card{background:rgba(0,0,0,.40); border:1px solid rgba(255,180,0,.16); border-radius: var(--radius); overflow:hidden;}
+  .head{padding:14px 16px; border-bottom:1px solid rgba(255,180,0,.12);
+        background:linear-gradient(90deg, rgba(255,180,0,.18), rgba(255,90,0,.10), rgba(0,0,0,0));}
+  .head strong{font-size:18px; letter-spacing:.2px;}
+  .body{padding:14px 16px;}
+  ul{list-style:none; padding:0; margin:0; display:flex; flex-direction:column; gap:10px;}
+  li{padding:10px 12px; border-radius:14px; background:rgba(0,0,0,.35); border:1px solid rgba(255,180,0,.12); font-weight:800;}
+  .muted{color:var(--muted); font-weight:700;}
 </style>
 </head>
 <body>
   <div class="wrap">
-    <div class="topbar">
-      <div class="title">
-        <h1>Équipes</h1>
-        <div class="subtitle">CS Consenvoye • page modifiable</div>
-      </div>
+    <div class="top">
+      <h1>Équipes</h1>
       <button class="btn" onclick="history.back()">← Retour</button>
     </div>
 
-    <div class="grid" id="teams"></div>
-
-    <div class="agents card" style="margin-top: var(--gap);">
-      <div class="card-h">
-        <div style="display:flex;align-items:center;gap:10px;">
-          <span class="badge">AGENTS</span>
-          <div style="color:var(--muted);font-weight:700;">liste + compétences (si renseignées)</div>
-        </div>
-      </div>
-      <div class="card-b">
-        <input class="search" id="q" placeholder="Rechercher un nom…">
-        <ul class="list" id="agents"></ul>
-        <div class="hint">
-          Pour modifier facilement : ouvre <code>equipes.html</code> et change le tableau <code>DATA</code> (en bas du fichier).<br>
-          Tu peux aussi ajouter <code>adjoint</code> et <code>membres</code> pour chaque équipe.
-        </div>
-      </div>
-    </div>
+    <div class="grid" id="grid"></div>
+    <div class="muted" style="margin-top:14px;">Dernière mise à jour : <span id="maj">—</span></div>
   </div>
 
-<script>
-const DATA = {
-  "teams": [
-    {
-      "name": "Équipe 1",
-      "chef": "ADJ LALEEUW Franck",
-      "adjoint": "",
-      "membres": []
-    },
-    {
-      "name": "Équipe 2",
-      "chef": "ADJ SÉNÉCHAL Benjamin",
-      "adjoint": "",
-      "membres": []
-    }
-  ],
-  "agents": [
-    {
-      "name": "SA2 BAMMÉ Melody",
-      "tag": "FORACC"
-    },
-    {
-      "name": "CPL BAROTTE Christopher",
-      "tag": "ACCPRO"
-    },
-    {
-      "name": "SA1 BAUR Benjamin",
-      "tag": "FPS"
-    },
-    {
-      "name": "CPL CHRISTAL Emeric",
-      "tag": "CATE"
-    },
-    {
-      "name": "SA1 CHRISTAL Mallaury",
-      "tag": "ISP"
-    },
-    {
-      "name": "INF DUR Amélie",
-      "tag": "PL"
-    },
-    {
-      "name": "CPL GAFFARD Robin",
-      "tag": "CE"
-    },
-    {
-      "name": "ADC KOLODZIEJCZAK Stéphane",
-      "tag": "CHEF D'ÉQUIPE"
-    },
-    {
-      "name": "ADJ LALEEUW Franck",
-      "tag": "APPRENANT"
-    },
-    {
-      "name": "INF LEPEZEL Laura",
-      "tag": "EQUIPIER"
-    },
-    {
-      "name": "SGT MICHEL Marianne",
-      "tag": "COD1"
-    },
-    {
-      "name": "CNE MORIN Alexandre",
-      "tag": "RECRUE"
-    },
-    {
-      "name": "LTN PARTY Olivier",
-      "tag": "CA1"
-    },
-    {
-      "name": "CPL PERROT Baptiste",
-      "tag": "ADJOINT"
-    },
-    {
-      "name": "CPL ROGIE Florian",
-      "tag": ""
-    },
-    {
-      "name": "SA2 SABOURET BAROTTE Mathys",
-      "tag": ""
-    },
-    {
-      "name": "ADJ SÉNÉCHAL Benjamin",
-      "tag": ""
-    },
-    {
-      "name": "SCH STELLATO Vincent",
-      "tag": ""
-    },
-    {
-      "name": "SA2 TRONTIN Chloë",
-      "tag": ""
-    },
-    {
-      "name": "SA1 VÉNANTE Amélie",
-      "tag": ""
-    },
-    {
-      "name": "ADC VÉNANTE Pierre",
-      "tag": ""
-    },
-    {
-      "name": "SCH WALLARIN Hélène",
-      "tag": ""
-    }
-  ]
-};
+  <script src="equipes-data.js"></script>
+  <script>
+    // équipesData est défini dans equipes-data.js
+    const grid = document.getElementById("grid");
+    document.getElementById("maj").textContent = equipesData.updatedAt || "—";
 
-function esc(s) {
-  return String(s ?? "").replace(/[&<>"']/g, c => ({"&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;"}[c]));
-}
-
-function renderTeams() {
-  const el = document.getElementById("teams");
-  el.innerHTML = "";
-  for (const t of DATA.teams) {
-    const membres = Array.isArray(t.membres) ? t.membres : [];
-    const membresHtml = membres.length
-      ? `<ul class="list">` + membres.map(n => `<li class="pill"><span>${esc(n)}</span></li>`).join("") + `</ul>`
-      : `<div class="hint">Membres non renseignés (tu peux les ajouter dans <code>DATA.teams[].membres</code>).</div>`;
-
-    const adj = t.adjoint ? `<div class="row"><div class="k">Adjoint</div><div class="v">${esc(t.adjoint)}</div></div>` : "";
-
-    el.insertAdjacentHTML("beforeend", `
-      <section class="card">
-        <div class="card-h">
-          <span class="badge">${esc(t.name)}</span>
+    function card(team){
+      const names = (team.members || []).map(n => `<li>${n}</li>`).join("");
+      return `
+        <div class="card">
+          <div class="head"><strong>${team.name}</strong></div>
+          <div class="body">
+            ${team.members?.length ? `<ul>${names}</ul>` : `<div class="muted">Aucun membre renseigné</div>`}
+          </div>
         </div>
-        <div class="card-b">
-          <div class="row"><div class="k">Chef d'équipe</div><div class="v">${esc(t.chef || "")}</div></div>
-          ${adj}
-          <div style="margin-top:12px; font-weight:900; color: var(--fire3);">Membres</div>
-          ${membresHtml}
-        </div>
-      </section>
-    `);
-  }
-}
+      `;
+    }
 
-function renderAgents(filter="") {
-  const q = filter.trim().toLowerCase();
-  const list = document.getElementById("agents");
-  list.innerHTML = "";
-  const items = (DATA.agents || []).filter(a => !q || String(a.name||"").toLowerCase().includes(q));
-  for (const a of items) {
-    const tag = a.tag ? `<span class="tag">${esc(a.tag)}</span>` : "";
-    list.insertAdjacentHTML("beforeend", `
-      <li class="pill">
-        <span style="font-weight:800">${esc(a.name)}</span>
-        ${tag}
-      </li>
-    `);
-  }
-}
-
-document.getElementById("q").addEventListener("input", (e) => renderAgents(e.target.value));
-
-renderTeams();
-renderAgents();
-</script>
+    grid.innerHTML = equipesData.teams.map(card).join("");
+  </script>
 </body>
 </html>
