--- a/equipes.html
+++ b/equipes.html
@@ -130,7 +130,7 @@
     /* En-tête “Fonction | Nom | Comp” */
     .colsHead{
       display:grid;
-      grid-template-columns: 170px 1fr 1fr; /* <- colonnes fixes => alignement parfait */
+      grid-template-columns: 1fr 1fr 1fr; /* <- colonnes fixes => alignement parfait */
       gap: 12px;
       align-items: center;
       padding: 10px 12px;
